# infoscreen

./: .gitignore  LinzAGDepartureModel.cpp  LinzAGDepartureModel.hpp  LinzAGDepartureSource.cpp  LinzAGDepartureSource.hpp  README.md  flake.nix  tnf-infoscreen.cpp  tnf-infoscreen.pro  tnf-infoscreen.qml
admins/: default.nix  gabriel.nix
app/: CMakeLists.txt  CurrentTime.cpp  CurrentTime.hpp  DepartureModel.cpp  DepartureModel.hpp  DeparturesSortFilterProxyModel.cpp  DeparturesSortFilterProxyModel.hpp  LinzAGDepartureModel.hpp  LinzAGDepartureSource.hpp  LinzagDepartureModel.cpp  LinzagDepartureModel.hpp  LinzagDepartureSource.cpp  LinzagDepartureSource.hpp  MensaMenuModel.cpp  MensaMenuModel.hpp  MensaMenuSource.cpp  MensaMenuSource.hpp  OoevvDepartureModel.cpp  OoevvDepartureModel.hpp  OoevvDepartureSource.cpp  OoevvDepartureSource.hpp  TnfInfoscreen.qml  default.nix  tnf-infoscreen.cpp
os/: configuration.nix  usb_otg.nix
os/secrets/: secrets.nix  wifi.age
